objects/ASI_eForm_User_ID_Request_Item__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eForm_BO_Additional_Remarks__c</fullName>
        <label>Addition Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Action__c</fullName>
        <label>IT Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IT Acknowledged</fullName>
                </value>
                <value>
                    <fullName>Invalid Submission</fullName>
                </value>
                <value>
                    <fullName>Work In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Feedback__c</fullName>
        <formula>IF( !ISPICKVAL(  ASI_eForm_User_ID_Request__r.ASI_eForm_Status__c  , &quot;Final&quot;)&amp;&amp; ISBLANK(  ASI_eForm_User_ID_Request__r.ASI_eForm_sys_resubmit__c  ) , &quot;&quot;, Text( ASI_eForm_IT_Action__c ))</formula>
        <label>IT Feedback</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_Handle_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Handle By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_ID_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_IT_RemarksN__c</fullName>
        <label>IT Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_PR_System__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PR System</label>
        <referenceTo>ASI_eForm_PR_System__c</referenceTo>
        <relationshipLabel>User ID Request Items</relationshipLabel>
        <relationshipName>User_ID_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Permission_Action__c</fullName>
        <label>Task</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Add Permission</fullName>
                </value>
                <value>
                    <fullName>Delete Permission</fullName>
                </value>
                <value>
                    <fullName>Change User Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Permission_TypeN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Permission Type</label>
        <referenceTo>ASI_eForm_Permission_Type__c</referenceTo>
        <relationshipLabel>User ID Request Items</relationshipLabel>
        <relationshipName>User_ID_Request_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Remarks__c</fullName>
        <label>Remarks</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_User_ID_Request__c</fullName>
        <label>User ID Request</label>
        <referenceTo>ASI_eForm_User_ID_Request__c</referenceTo>
        <relationshipLabel>Permission Request Details</relationshipLabel>
        <relationshipName>User_ID_Request_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>User ID Request Item</label>
    <nameField>
        <displayFormat>UIDRF-{0000000}</displayFormat>
        <label>Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User ID Request Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_User_ID_Request_Item</fullName>
        <active>true</active>
        <label>User ID Request Items</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ASI_eForm_Lock_IT_Action</fullName>
        <active>false</active>
        <errorConditionFormula>(ISPICKVAL( ASI_eForm_User_ID_Request__r.ASI_eForm_Status__c , &apos;Draft&apos;) || ISPICKVAL(  ASI_eForm_User_ID_Request__r.ASI_eForm_IT_Action__c  , &apos;Complete&apos;)) &amp;&amp;  ISCHANGED( ASI_eForm_IT_Action__c )</errorConditionFormula>
        <errorMessage>You are not allowed to change IT Action when the form is in Draft or Complete</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_UIDR_Additional_Remarks_Blank</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Permission_TypeN__c != null &amp;&amp;  ASI_eForm_Permission_TypeN__r.ASI_eForm_Additional_Info_Required__c &amp;&amp;   ISBLANK(ASI_eForm_BO_Additional_Remarks__c)</errorConditionFormula>
        <errorMessage>Addition Details cannot be empty based on selected Permission Type with #.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_UIDR_Protect_Complete_Item</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(ASI_eForm_IT_Action__c , &quot;Complete&quot;) &amp;&amp;  (RecordType.DeveloperName == &apos;ASI_eForm_User_ID_Request_Item&apos;)&amp;&amp; !ISPICKVAL( ASI_eForm_User_ID_Request__r.ASI_eForm_IT_Action__c, &quot;Complete&quot;) &amp;&amp;(ISCHANGED(ASI_eForm_PR_System__c)|| ISCHANGED(ASI_eForm_Permission_TypeN__c)|| ISCHANGED(ASI_eForm_BO_Additional_Remarks__c)|| ISCHANGED(ASI_eForm_Permission_Action__c) ||  ISCHANGED(ASI_eForm_Remarks__c))</errorConditionFormula>
        <errorMessage>You are not allowed to modify the item, because this item is already Complete</errorMessage>
    </validationRules>
</CustomObject>